# nothing

./: .gitignore  Cargo.toml  README.md  build.rs  build.sh
.github/workflows/: rust.yml
src/: fps_capper.rs  lib.rs  main.rs  windows_quirks.rs
